clang/test/BSC/Negative/Driver/rewrite-bsc/rewrite_bsc_wrong_pragma_and_header/bsc.h
#include <stdlib.h>

struct S<T> {
  T a;
  int b;
};

T S<T>::member(This *this) {
  return this->a;
}